--- a/.github/workflows/master_tollboothfunctions-faghixtxxm4sg.yml
+++ b/.github/workflows/master_tollboothfunctions-faghixtxxm4sg.yml
@@ -3,11 +3,11 @@
 
 name: Build and deploy dotnet core app to Azure Function App - TollBoothFunctions-faghixtxxm4sg
 
-on: |+
+on:
   push:
     branches:
       - master
-#  workflow_dispatch:
+  workflow_dispatch:
 
 env:
   AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
